fix overflow-x

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html, body{
     padding: 0;
     height: 100%;
     width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 body {    
     color: rgba(0,0,0,.5);
